# ray_tracing_in_a_weekend_rs

./: Cargo.toml  TODO  run_perf.sh  rustfmt.toml
raytracer_rs/: Cargo.toml
raytracer_rs/src/: main.rs  playground.rs
src/: camera.rs  cgmath.rs  color.rs  main.rs  material.rs  playground.rs  ray.rs  raytrace.rs  scene.rs  shape.rs
src/app/: app.rs  mod.rs  scenes.rs
src/cgmath/: aabb.rs  angle.rs  mod.rs  normal.rs  point3.rs  ray.rs  transform.rs  vec3.rs
src/raytracer/: camera.rs  color.rs  material.rs  mod.rs  ray.rs  raytrace.rs  scene.rs  shape.rs
src/raytracer/camera/: mod.rs  perspective.rs
src/raytracer/material/: dielectric.rs  helpers.rs  lambertian.rs  metal.rs  mod.rs
src/raytracer/shape/: mod.rs  sphere.rs
src/utils/: variant.rs
