[package]
name = "raytracer_rs"
version = "0.1.0"
authors = ["Ivan Barisic <ivan2029@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rand = "0.8"

env_logger = "0.8"
log = "0.4"

rayon = "1.5"
crossbeam = "0.8"

# image = { version = "0.23", features = ["png"] }

eframe = "0.12"

rhai = "0.20"
